# EW-THREAT-DETECTION-SYSTEM

./: CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  README_ZH.md  app.py  pyproject.toml  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
modules/: anomaly_detector.py  api_routes.py  data_simulator.py  geo_converter.py  location_algorithm.py  ui_routes.py
static/css/: style.css
static/js/: main.js  map_manager.js  real_data_manager.js  station_manager.js
templates/: index.html
tests/: test_anomaly.py  test_location.py
