[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ew-threat-detection-system"
version = "0.1.0"
description = "Distributed electromagnetic-threat detection and localization system."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Asaqe Lee"}
]
dependencies = [
    "Flask>=2.3.3",
    "numpy>=1.24.3",
    "scipy>=1.11.1",
    "matplotlib>=3.7.2",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
